terraform/k8s-deployments/tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: tomcat
spec:
  selector:
    app: tomcat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
